visibility fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -103,6 +103,7 @@ main {
   height: 100vh;
   object-fit: cover;
   width: 100vw;
+  z-index: -1;
 }
 // LOCOMOTIVE ====================================================================================
 
