--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,5 +4,7 @@
 
 .bg {
   z-index: -1;
+  position: absolute;
+  top: 0;
   object-fit: cover;
 }
